--- a/faculty1.html
+++ b/faculty1.html
@@ -120,6 +120,12 @@
             display: block;
             font-size: small;
         }
+        .h1, h1 {
+    font-size: calc(1.375rem + 1.5vw);
+    font-weight: bold;
+    font-family: "Times";
+    color: #b04400;
+}
     </style>
 </head>
 
@@ -134,12 +140,30 @@
             <a href="https://www.hansrajcollege.ac.in/contact" title="Login">Contact Us</a>
         </div>
     </div>
-    <div class="block2">
-        <h1>Hansraj College</h1>
-        <p>University of Delhi</p>
-        <p>NAAC Grade A+ with CGPA 3.62</p>
+    <div class="middleheader">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-4 col-sm-4 col-12" style="display: flex;align-items: center;">
+                    <a href="https://www.hansrajcollege.ac.in/" title="Hansraj College" class="logo" style="margin: auto;">
+                        <img src="https://www.hansrajcollege.ac.in/assets/front/images/logo_hindi_new.png" alt="Hansraj College">
+                    </a>
+                </div>
+                <div class="col-md-6 col-sm-6 col-7 text-center d-none d-lg-block d-xl-block">
+                    <h1>Hansraj College</h1>
+                      <p>University of Delhi</p>
+                    <p>NAAC Grade A+ with CGPA 3.62</p>
+                </div>
+                <div class="col-md-3 col-sm-3 col-xs-12 text-right d-none d-lg-block d-xl-block">
+                  <div class="head-right-logo">
+                  <a href="https://www.hansrajcollege.ac.in/azadi-ka-amrut-mahotsav/home"><img class="h-logo-1" src="https://www.hansrajcollege.ac.in/assets/front/images/azadilogo-bg.png" alt="Hansraj College"></a>
+                    <img class="h-logo-2" src="https://www.hansrajcollege.ac.in/assets/front/images/logo2.png" alt="Hansraj College">
+                </div>
+                </div>
+                <div class="col-2"></div>
+            </div>
+        </div>
     </div>
-    <div class></div>
+    
         <nav class="navbar navbar-expand-lg">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
