--- a/faculty1.html
+++ b/faculty1.html
@@ -149,7 +149,7 @@
                     </a>
                 </div>
                 <div class="col-md-6 col-sm-6 col-7 text-center d-none d-lg-block d-xl-block">
-                    <h1>Hansraj College</h1>
+                    <h1>HANSRAJ COLLEGE</h1>
                       <p>University of Delhi</p>
                     <p>NAAC Grade A+ with CGPA 3.62</p>
                 </div>
