--- a/faculty1.html
+++ b/faculty1.html
@@ -125,6 +125,7 @@
     font-weight: bold;
     font-family: "Times";
     color: #b04400;
+                text-transform: uppercase;
 }
     </style>
 </head>
